--- a/css.css
+++ b/css.css
@@ -1,10 +1,25 @@
 .continer {
-    width: 100%;
-    height: 100vh;
-    background-image: url("./nice-watercolor-background_24837-261.jpg");
+    border: 4px solid black;
+    width: 50%;
+    height: 60%;
+    background-image: url("");
     background-size: cover;
     background-position:center ;
+    margin: 0px 0 0 270px;
+    padding-bottom: 15px;
+    background-color: #262647
+    ;
 
+}
+#timer {
+
+    margin: 75px 0px 0px 220px;
+    padding: 20px;
+    border: 2px solid #4169E1;
+    border-radius: 40%;
+    text-align: center;
+    width: 40%;
+    color: aliceblue ;
 }
 
 
@@ -19,33 +34,44 @@
 
 .Question {
 
-    width: 54%;
-    height: 200px;
+    width: 80%;
+    height: 80px;
     margin: auto;
+    border: 2px solid #4169E1;
+    padding: 10px 20px;
+    border-radius: 10px;
+    
+    color: #F5FFFA ;
+
+    
 
 
 }
 #QA {
     font-size: x-large;
     font-style: oblique;
-    color: rgb(36, 62, 109); ;
-}
+    color: #F5FFFA ;}
 
 .multipul {
+    
+    
     width: 70%;
     height: 300px;
-    display: grid;
-    grid-template-columns: 200px 200px;
-    grid-template-rows: 200px 200px;
-    margin-left: 35%;
+    display: flex;
+    flex-direction : column;
+    justify-content : space-around;   
+    margin-left: 25%;
 
 }
 
 .multi1, .multi2, .multi3, .multi4 {
     display: flex;
+    width: 400px;
+    background: #6a94e4;
+    padding: 2px;
+    border: 2px solid;
+    cursor: pointer;
 }
-
-
 
 
 
@@ -58,10 +84,12 @@
 #button1, #button2 {
     cursor: pointer;
     margin: auto;
-    width: 60px;
+    width: 100px;
     height: 50px;
-    background: rgb(36, 62, 109);
-
+    background-color: #272e8b;
+    padding: 5px;
+    border: 2px solid #4169E1;
+    border-radius: 8px;
 }
 
 #button2 {
