--- a/css.css
+++ b/css.css
@@ -1,3 +1,13 @@
+body {
+    background-image: url("./background.jpg");
+}
+
+input {
+    width: 20px;
+    height: 20px;
+    margin-top: 10px;
+    
+}
 .continer {
     border: 4px solid black;
     width: 50%;
@@ -5,9 +15,9 @@
     background-image: url("");
     background-size: cover;
     background-position:center ;
-    margin: 0px 0 0 270px;
-    padding-bottom: 15px;
-    background-color: #262647
+    margin: auto; 
+   padding-bottom: 15px;
+    background-color: #293777
     ;
 
 }
@@ -28,6 +38,9 @@
     height: 50px;
     margin: auto;
     text-align: center;
+    font-size: x-large;
+    font-style: italic;
+    color: rgb(20, 163, 51);
    
 }
 
@@ -50,7 +63,12 @@
 #QA {
     font-size: x-large;
     font-style: oblique;
-    color: #F5FFFA ;}
+    color: #F5FFFA ;
+    font-style: italic;
+
+
+
+}
 
 .multipul {
     
@@ -71,6 +89,10 @@
     padding: 2px;
     border: 2px solid;
     cursor: pointer;
+}
+
+#aaaaa, #bbbbb, #cccccc, #dddddd {
+    font-style: italic;
 }
 
 
