--- a/css.css
+++ b/css.css
@@ -82,7 +82,7 @@ input {
 
 }
 
-.multi1, .multi2, .multi3, .multi4 {
+#first1muil, #first2muil, #first3muil, #first4muil {
     display: flex;
     width: 400px;
     background: #6a94e4;
@@ -116,4 +116,21 @@ input {
 
 #button2 {
     display: none;
+}
+
+a {
+    display: none;
+    cursor: pointer;
+    margin: auto;
+    width: 95px;
+    height: 37px;
+    background-color: #272e8b;
+    padding: 5px;
+    border: 2px solid #4169E1;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: xx-large;
+    color: #F5FFFA ;
+    margin-top: 100px;
+
 }
