ready to submit

--- a/css.css
+++ b/css.css
@@ -6,24 +6,29 @@ input {
     width: 20px;
     height: 20px;
     margin-top: 10px;
+    cursor: pointer;
     
 }
 .continer {
-    border: 4px solid black;
+    border: 4px solid #324180;
+    border-radius: 10px;
     width: 50%;
     height: 60%;
     background-image: url("");
     background-size: cover;
     background-position:center ;
     margin: auto; 
-   padding-bottom: 15px;
-    background-color: #171f41
-    ;
+    padding-bottom: 15px;
+    background-color: #324180;
+    margin-top: 5%;
+
+
 
 }
 #timer {
 
-    margin: 75px 0px 0px 220px;
+    margin: auto;
+    margin-top: 5%;
     padding: 20px;
     border: 2px solid #228B22;
     background-color: #228B22;
@@ -73,6 +78,7 @@ input {
 
 #showMulti {
     display: none;
+    margin-top: 15px;
 }
 
 .multipul {
@@ -89,16 +95,17 @@ input {
 
 #first1muil, #first2muil, #first3muil, #first4muil {
     display: flex;
-    width: 400px;
-    background: #6a94e4;
+    width: 75%;
+    background: #5773c9;
     padding: 2px;
     border: 2px solid;
-    cursor: pointer;
+    border-radius: 8px;
 }
 
 #aaaaa, #bbbbb, #cccccc, #dddddd {
     font-style: italic;
     color: white;
+    font-size: 18px;
 }
 
 
@@ -118,6 +125,9 @@ input {
     padding: 5px;
     border: 2px solid #228B22;
     border-radius: 8px;
+    font-style: italic;
+    color: white;
+    font-size: x-large;
 }
 
 #button2 {
